<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learn Morse</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="change_letter">Change Letter</string>
    <string name="play">Play</string>
    <string name="show">Show</string>
    <string name="next">Random</string>
    <string name="choose_as_answer">Choose as Answer</string>

</resources>