<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
				<!-- play/show buttons -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <Button 
			        android:id="@+id/play_tone_button"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/play"/>
            <Button 
			        android:id="@+id/show_letter_button"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/show"/>
            <Button 
			        android:id="@+id/next_letter_button"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/next"/>
    		</LinearLayout>
    		
        <!-- letter display -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
             <TextView  
                android:id="@+id/letter_textview "
								android:layout_width="fill_parent" 
							  android:layout_height="150dip" 
							  android:gravity="center"
							  android:textSize="80dip"
							  android:paddingTop="40dip"
							  android:text="S"
							/>
             
             <TextView  
                android:id="@+id/dit_dash_textview"
								android:layout_width="fill_parent" 
							  android:layout_height="80dip" 
							  android:gravity="center_horizontal"
							  android:textSize="80dip"
							  android:text="..."
							/>
            
        </LinearLayout>
</LinearLayout>

